--- a/client/style/side_bar/_sideBar.scss
+++ b/client/style/side_bar/_sideBar.scss
@@ -123,7 +123,7 @@
         }
     }
 
-    transition: transform .5s ease-in-out;
+    transition: transform .5s ease-in-out, visibility .5s ease-in-out;
 
 }
 
@@ -144,6 +144,7 @@
 
 #side-bar.hide {
     transform: translateX(-$side-bar-width);
+    visibility: hidden;
 }
 
 #side-bar.show {
